# container-manager

./: .gitignore  Doxyfile  Makefile.am  README.md  configure.ac
.github/workflows/: codeql.yml
configs/: agl-momi-ivi-demo.json  cluster-demo.json
configs/schema/: container-config-schema.json
configs/schema/doc/: container-config-schema.html
doc/: container-manager.md
include/: container-manager-interface.h  worker-plugin-interface.h
plugin/: Makefile.am  erase-mkfs-plugin.c  fsck-plugin.c  mkfs-plugin.c
plugin/libs/: Makefile.am  cm-worker-utils.c  cm-worker-utils.h
src/: CBase.hxx  CEventLoop.cxx  CEventLoop.hxx  Makefile.am  block-util.c  block-util.h  cgroup-utils.c  cgroup-utils.h  cm-utils.c  cm-utils.h  container-config.c  container-config.h  container-control-exec.c  container-control-interface.c  container-control-interface.h  container-control-internal.h  container-control-monitor.c  container-control.c  container-control.h  container-external-interface.c  container-external-interface.h  container-manager-operations-simple.c  container-manager-operations.c  container-manager-operations.h  container-manager.c  container-manager.cpp  container-workqueue-worker.c  container-workqueue-worker.h  container-workqueue.c  container-workqueue.h  container.h  device-control-dynamic-udev.c  device-control-dynamic-udev.h  device-control-dynamic.c  device-control-static.c  device-control.h  devicemng.h  lxc-util-config.c  lxc-util.c  lxc-util.h  (+14 more)
src/command/: Makefile.am  cmcontrol.c
src/parser/: parser-common.c  parser-common.h  parser-container.c  parser-container.h  parser-manager.c  parser-manager.h
test/: container-manager-host.json  container-manager.json  sd-emmcmap.txt
test/agl-data/: agl-flutter-ivi-demo.json  agl-html5-ivi-demo.json  agl-qt-ivi-demo.json  cluster-demo.json
test/data/: agl-cluster.json  agl-demo-ivi.json  guest-wayland.json
test/target-data/: agl-cluster.json  agl-demo-ivi.json
test/unit/: Makefile.am
test/unit/data/: agl-cluster.json  test-base-05.json  test-nameonly-00.json  test-noname-00.json
test/unit/data/test-base/00/: test-base-00-0.json  test-base-00-1.json  test-base-00-2.json  test-base-00-3.json
test/unit/data/test-base/01/: test-base-01-0.json  test-base-01-1.json  test-base-01-2.json
test/unit/data/test-base/02/: test-base-02-0.json  test-base-02-1.json  test-base-02-10.json  test-base-02-2.json  test-base-02-3.json  test-base-02-4.json  test-base-02-5.json  test-base-02-6.json  test-base-02-7.json  test-base-02-8.json  test-base-02-9.json
test/unit/parser/: interface_test.cpp
